--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         </div>
         <div>
             <div x-show="showContentFile" class="text-end">
-                <textarea cols="30" rows="15" class="form-control" x-text="contentFile()"></textarea>
+                <textarea cols="30" rows="15" class="form-control" readonly x-text="contentFile()"></textarea>
             </div>
         </div>
         <hr>
@@ -122,7 +122,7 @@
                                 <input type="text" x-model="item.name" class="form-control form-control-sm border-info-subtle" placeholder="Name" @keyup="saveList" required pattern="[A-Za-z0-9]{1,}">
                             </div>
                             <div class="mb-1">
-                                <div class="border border-primary-subtle p-1 rounded pointer" @click="showDropdown(key, 'activeItemTypeDropdown')">
+                                <div class="border border-primary-subtle p-1 rounded pointer" @click="showDropdown(item, dropdownItemTypes)">
                                     <template x-if="item.itemType.length <= 0">
                                         <span>Choose one or multiple item type</span>
                                     </template>
@@ -133,37 +133,16 @@
                                         </div>
                                     </template>
                                 </div>
-                                <template x-if="activeItemTypeDropdown == key">
-                                    <ul class="dropdown-menu">
-                                        <template x-for="itemType in itemTypes">
-                                            <li x-show="item.itemType.indexOf(itemType) == -1">
-                                                <a class="dropdown-item" href="#" x-text="itemType" @click.prevent="item.itemType.push(itemType); saveList();"></a>
-                                            </li>
-                                        </template>
-                                    </ul>
-                                </template>
                             </div>
                             <div class="mb-1">
                                 <input type="number" class="form-control form-control-sm border-info-subtle" x-model="item.minPower" placeholder="Min Power" @change="saveList">
                             </div>
-                            <template x-for="(affix, affixKey) in item.affixPools" :key="affix.id">
+                            <template x-for="affix in item.affixPools" :key="affix.id">
                                 <div class="mb-1">
                                     <div class="input-group input-group-sm">
-                                        <span data-dropdown-close="true" :title="affixes[affix.affix] ?? ''" class="text-start input-group-text affix-value border-warning-subtle" x-text="affixes[affix.affix] ?? 'Choose an affix'" @click="showDropdown(key + '-' + affixKey, 'activeAffixDropdown')"></span>
+                                        <span data-dropdown-close="true" :title="affixes[affix.affix] ?? ''" class="text-start input-group-text affix-value border-warning-subtle" x-text="affixes[affix.affix] ?? 'Choose an affix'" @click.prevent="showDropdown(affix, dropdownAffix)"></span>
                                         <input type="number" class="form-control form-control-sm border-warning-subtle" x-model="affix.value" @keyup="saveList" placeholder="Value">
                                         <button type="button" class="btn btn-sm btn-outline-secondary border-warning-subtle" @click="removeAffix(key, affixKey, 'affixes')">⛔</button>
-                                        <template x-if="activeAffixDropdown == key + '-' + affixKey">
-                                            <div class="dropdown-menu">
-                                                <form>
-                                                    <div class="p-1">
-                                                        <input type="text" class="form-control form-control-sm border-info-subtle" x-model="searchTextAffixes" placeholder="Search an affix">
-                                                    </div>
-                                                </form>
-                                                <template x-for="affixKey in Object.keys(searchListAffixes())">
-                                                    <a :class="{ 'dropdown-item' : true, active : affixKey == affix.affix }" href="#" x-text="affixes[affixKey]" @click.prevent="affix.affix = affixKey; saveList();"></a>
-                                                </template>
-                                            </div>
-                                        </template>
                                     </div>
                                 </div>
                             </template>
@@ -200,21 +179,9 @@
                             <div class="border border-primary-subtle p-2 rounded h-100">
                                 <div class="mb-1">
                                     <div class="input-group">
-                                        <span :title="aspects[item.aspect]?.desc ?? 'Choose an aspect'" data-dropdown-close="true" class="text-start input-group-text affix-value border-info-subtle" x-text="item.aspect ? item.aspect : 'Choose an aspect'" @click="showDropdown(key, 'activeAspectDropdown')"></span>
+                                        <span :title="aspects[item.aspect]?.desc ?? 'Choose an aspect'" data-dropdown-close="true" class="text-start input-group-text affix-value border-info-subtle" x-text="item.aspect ? item.aspect : 'Choose an aspect'" @click="showDropdown(item, dropdownAspects)"></span>
                                         <input type="number" x-model="item.value" class="form-control form-control-sm border-info-subtle" placeholder="Value" @change="saveList()" />
                                         <button class="btn border-info-subtle btn-sm" type="button" @click="removeAspect(key)">⛔</button>
-                                        <template x-if="activeAspectDropdown == key">
-                                            <div class="dropdown-menu dropdown-menu-aspect">
-                                                <form>
-                                                    <div class="p-1">
-                                                        <input type="text" class="form-control form-control-sm border-info-subtle" x-model="searchTextAspects" placeholder="Search an aspect">
-                                                    </div>
-                                                </form>
-                                                <template x-for="aspectListKey in Object.keys(searchListAspects())">
-                                                    <a :class="{ 'dropdown-item' : true, active : aspectListKey == item.aspect }" href="#" x-html="'<strong>' + aspectListKey + '</strong> : ' + aspects[aspectListKey].desc" @click.prevent="item.aspect = aspectListKey; saveList();"></a>
-                                                </template>
-                                            </div>
-                                        </template>
                                     </div>
                                 </div>
                             </div>
@@ -240,20 +207,8 @@
                 <div class="col-xl-4 col-md-6">
                     <div class="border border-primary-subtle p-2 rounded h-100">
                         <div class="mb-1 input-group">
-                            <span :title="uniques[item.unique]?.desc ?? 'Choose a unique'" data-dropdown-close="true" class="text-start input-group-text affix-value border-info-subtle" x-text="item.unique ? item.unique : 'Choose a unique'" @click="showDropdown(key, 'activeUniqueDropdown')"></span>
+                            <span :title="uniques[item.unique]?.desc ?? 'Choose a unique'" data-dropdown-close="true" class="text-start input-group-text affix-value border-info-subtle" x-text="item.unique ? item.unique : 'Choose a unique'" @click="showDropdown(item, dropdownUniques)"></span>
                             <input type="number" x-model="item.value" class="form-control form-control-sm border-info-subtle" placeholder="Value" @change="saveList()" />
-                            <template x-if="activeUniqueDropdown == key">
-                                <div class="dropdown-menu dropdown-menu-aspect">
-                                    <form>
-                                        <div class="p-1">
-                                            <input type="text" class="form-control form-control-sm border-info-subtle" x-model="searchTextUniques" placeholder="Search a unique">
-                                        </div>
-                                    </form>
-                                    <template x-for="uniqueListKey in Object.keys(searchListUniques())">
-                                        <a :class="{ 'dropdown-item' : true, active : uniqueListKey == item.unique }" href="#" x-html="'<strong>' + uniqueListKey + '</strong> : ' + uniques[uniqueListKey].desc" @click.prevent="item.unique = uniqueListKey; saveList();"></a>
-                                    </template>
-                                </div>
-                            </template>
                         </div>
                         <div class="mb-1">
                             <input type="number" class="form-control form-control-sm border-info-subtle" x-model="item.minPower" placeholder="Min Power" @change="saveList">
@@ -261,21 +216,9 @@
                         <template x-for="(affix, affixKey) in item.affixPools" :key="affix.id">
 
                             <div class="input-group input-group-sm mb-1">
-                                <span data-dropdown-close="true" :title="affixes[affix.affix] ?? ''" class="text-start input-group-text affix-value border-warning-subtle" x-text="affixes[affix.affix] ?? 'Choose an affix'" @click="showDropdown(key + '-' + affixKey, 'activeAffixDropdown')"></span>
+                                <span data-dropdown-close="true" :title="affixes[affix.affix] ?? ''" class="text-start input-group-text affix-value border-warning-subtle" x-text="affixes[affix.affix] ?? 'Choose an affix'" @click="showDropdown(affix, dropdownAffix)"></span>
                                 <input type="number" class="form-control form-control-sm border-warning-subtle" x-model="affix.value" @keyup="saveList" placeholder="Value">
                                 <button type="button" class="btn btn-sm btn-outline-secondary border-warning-subtle" @click="removeAffix(key, affixKey, 'uniques')">⛔</button>
-                                <template x-if="activeAffixDropdown == key + '-' + affixKey">
-                                    <div class="dropdown-menu">
-                                        <form>
-                                            <div class="p-1">
-                                                <input type="text" class="form-control form-control-sm border-info-subtle" x-model="searchTextAffixes" placeholder="Search an affix">
-                                            </div>
-                                        </form>
-                                        <template x-for="affixKey in Object.keys(searchListAffixes())">
-                                            <a :class="{ 'dropdown-item' : true, active : affixKey == affix.affix }" href="#" x-text="affixes[affixKey]" @click.prevent="affix.affix = affixKey; saveList();"></a>
-                                        </template>
-                                    </div>
-                                </template>
                             </div>
 
                         </template>
@@ -325,6 +268,47 @@
                     </div>
                 </div>
             </div>
+        </div>
+
+        <div id="dropdownAffix" class="dropdown-menu">
+            <form>
+                <div class="p-1">
+                    <input type="text" class="form-control form-control-sm border-info-subtle" x-model="searchTextAffixes" placeholder="Search an affix">
+                </div>
+            </form>
+            <template x-for="affixKey in Object.keys(searchListAffixes())">
+                <a :class="{ 'dropdown-item' : true, active : currentObjForDropdown?.affix == affixKey }" href="#" x-text="affixes[affixKey]" @click.prevent="currentObjForDropdown.affix = affixKey; saveList();"></a>
+            </template>
+        </div>
+
+        <ul class="dropdown-menu" id="dropdownItemTypes">
+            <template x-for="itemType in itemTypes">
+                <li x-show="currentObjForDropdown?.itemType?.indexOf(itemType) == -1">
+                    <a class="dropdown-item" href="#" x-text="itemType" @click.prevent="currentObjForDropdown?.itemType?.push(itemType); saveList();"></a>
+                </li>
+            </template>
+        </ul>
+
+        <div class="dropdown-menu dropdown-menu-aspect" id="dropdownUniques">
+            <form>
+                <div class="p-1">
+                    <input type="text" class="form-control form-control-sm border-info-subtle" x-model="searchTextUniques" placeholder="Search a unique">
+                </div>
+            </form>
+            <template x-for="uniqueListKey in Object.keys(searchListUniques())">
+                <a :class="{ 'dropdown-item' : true, active : uniqueListKey == currentObjForDropdown?.unique }" href="#" x-html="'<strong>' + uniqueListKey + '</strong> : ' + uniques[uniqueListKey].desc" @click.prevent="currentObjForDropdown.unique = uniqueListKey; saveList();"></a>
+            </template>
+        </div>
+
+        <div class="dropdown-menu dropdown-menu-aspect" id="dropdownAspects">
+            <form>
+                <div class="p-1">
+                    <input type="text" class="form-control form-control-sm border-info-subtle" x-model="searchTextAspects" placeholder="Search an aspect">
+                </div>
+            </form>
+            <template x-for="aspectListKey in Object.keys(searchListAspects())">
+                <a :class="{ 'dropdown-item' : true, active : aspectListKey == currentObjForDropdown?.aspect }" href="#" x-html="'<strong>' + aspectListKey + '</strong> : ' + aspects[aspectListKey].desc" @click.prevent="currentObjForDropdown.aspect = aspectListKey; saveList();"></a>
+            </template>
         </div>
 
     </div>
