--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
         <hr>
         <div class="row">
             <div class="col">
-                <div class="row">
+                <div class="row gx-2">
                 <template x-for="(build, buildIndex) in myList" x-key="build.id">
                     <div class="col-2">
-                        <button type="button" class="btn btn-sm btn-info" x-text="build.name" @click="changeBuild(buildIndex)" x-show="activeBuild != buildIndex"></button>
-                        <div class="input-group">
-                            <input type="text" x-show="activeBuild == buildIndex" class="form-control form-control-sm" :disabled="buildIndex != activeBuild" x-model="build.name" @change="saveList()">
-                            <template x-if="myList.length > 1 && buildIndex == activeBuild">
+                        <span class="btn btn-sm btn-info w-100 border-info-subtle" x-text="build.name" @click="changeBuild(buildIndex)" x-show="activeBuild != buildIndex"></span>
+                        <div class="input-group" x-show="activeBuild == buildIndex">
+                            <input type="text" class="form-control form-control-sm" :disabled="buildIndex != activeBuild" x-model="build.name" @change="saveList()">
+                            <template x-if="myList.length > 1">
                                 <button type="button" class="btn btn-light btn-sm" @click="removeBuild(buildIndex)">⛔</button>
                             </template>
                         </div>
@@ -66,7 +66,7 @@
                 </div>
             </div>
         </div>
-        <div class="row">
+        <div class="row mt-2">
             <div class="col text-end">
                 <button type="button" class="btn btn-sm btn-outline-info" @click="exportBuilds">Export builds</button>
                 <button type="button" class="btn btn-sm btn-outline-info" data-bs-toggle="modal" data-bs-target="#modalImport">Import builds</button>
@@ -101,7 +101,7 @@
         </div>
         <div>
             <div x-show="showContentFile" class="text-end">
-                <textarea cols="30" rows="15" class="form-control" x-text="contentFile()"></textarea>
+                <textarea cols="30" rows="15" class="form-control" readonly x-text="contentFile()"></textarea>
             </div>
         </div>
         <hr>
@@ -122,7 +122,7 @@
                                 <input type="text" x-model="item.name" class="form-control form-control-sm border-info-subtle" placeholder="Name" @keyup="saveList" required pattern="[A-Za-z0-9]{1,}">
                             </div>
                             <div class="mb-1">
-                                <div class="border border-primary-subtle p-1 rounded pointer" @click="showDropdown(key, 'activeItemTypeDropdown')">
+                                <div class="border border-primary-subtle p-1 rounded pointer" @click="showDropdown(item, dropdownItemTypes)" @keydown.space.prevent="showDropdown(item, dropdownItemTypes)" tabindex="0">
                                     <template x-if="item.itemType.length <= 0">
                                         <span>Choose one or multiple item type</span>
                                     </template>
@@ -133,43 +133,23 @@
                                         </div>
                                     </template>
                                 </div>
-                                <template x-if="activeItemTypeDropdown == key">
-                                    <ul class="dropdown-menu">
-                                        <template x-for="itemType in itemTypes">
-                                            <li x-show="item.itemType.indexOf(itemType) == -1">
-                                                <a class="dropdown-item" href="#" x-text="itemType" @click.prevent="item.itemType.push(itemType); saveList();"></a>
-                                            </li>
-                                        </template>
-                                    </ul>
-                                </template>
                             </div>
                             <div class="mb-1">
                                 <input type="number" class="form-control form-control-sm border-info-subtle" x-model="item.minPower" placeholder="Min Power" @change="saveList">
                             </div>
-                            <template x-for="(affix, affixKey) in item.affixPools" :key="affix.id">
-                                <div class="mb-1">
-                                    <div class="input-group input-group-sm">
-                                        <span data-dropdown-close="true" :title="affixes[affix.affix] ?? ''" class="text-start input-group-text affix-value border-warning-subtle" x-text="affixes[affix.affix] ?? 'Choose an affix'" @click="showDropdown(key + '-' + affixKey, 'activeAffixDropdown')"></span>
-                                        <input type="number" class="form-control form-control-sm border-warning-subtle" x-model="affix.value" @keyup="saveList" placeholder="Value">
-                                        <button type="button" class="btn btn-sm btn-outline-secondary border-warning-subtle" @click="removeAffix(key, affixKey, 'affixes')">⛔</button>
-                                        <template x-if="activeAffixDropdown == key + '-' + affixKey">
-                                            <div class="dropdown-menu">
-                                                <form>
-                                                    <div class="p-1">
-                                                        <input type="text" class="form-control form-control-sm border-info-subtle" x-model="searchTextAffixes" placeholder="Search an affix">
-                                                    </div>
-                                                </form>
-                                                <template x-for="affixKey in Object.keys(searchListAffixes())">
-                                                    <a :class="{ 'dropdown-item' : true, active : affixKey == affix.affix }" href="#" x-text="affixes[affixKey]" @click.prevent="affix.affix = affixKey; saveList();"></a>
-                                                </template>
-                                            </div>
-                                        </template>
-                                    </div>
-                                </div>
-                            </template>
                             <div class="text-end mb-1">
                                 <button class="btn btn-info btn-sm" @click="addAffix(key, 'affixes')">Add Affix</button>
                             </div>
+                            <template x-for="(affix, affixKey) in item.affixPools" :key="affix.id">
+                                <div class="mb-1">
+                                    <div class="input-group input-group-sm">
+                                        <span data-dropdown-close="true" :title="affixes[affix.affix] ?? ''" class="text-start input-group-text affix-value border-warning-subtle" x-text="affixes[affix.affix] ?? 'Choose an affix'" @click.prevent="showDropdown(affix, dropdownAffix)" @keydown.space.prevent="showDropdown(affix, dropdownAffix)" tabindex="0"></span>
+                                        <input type="number" class="form-control form-control-sm border-warning-subtle" x-model="affix.value" @keyup="saveList" placeholder="Value">
+                                        <button type="button" class="btn btn-sm btn-outline-secondary border-warning-subtle" @click="removeAffix(key, affixKey, 'affixes')">⛔</button>
+                                    </div>
+                                </div>
+                            </template>
+
                             <div class="mb-1">
                                 <input type="number" class="form-control form-control-sm border-info-subtle" placeholder="Minimum affix" x-model="item.minAffixCount">
                             </div>
@@ -184,48 +164,6 @@
             </div>
         </div>
         <hr>
-        <div class="aspects">
-            <div class="sticky-top pt-1 pb-1 bg-body mb-2">
-                <h4>Aspects :
-                    <button type="button" class="btn btn-sm btn-outline-secondary" x-html="showAspects ? '⏫' : '⏬'" @click="showAspects = !showAspects"></button>
-                </h4>
-                <p x-show="showAspects">
-                    <button class="btn btn-primary" @click="addAspect()">Add Aspect</button>
-                </p>
-            </div>
-            <div class="mb-5" x-show="showAspects">
-                <div class="row gy-2 gx-4">
-                    <template x-for="(item, key) in myList[activeBuild].aspects" x-key="item.id || JSON.stringify(item)">
-                        <div class="col-md-4">
-                            <div class="border border-primary-subtle p-2 rounded h-100">
-                                <div class="mb-1">
-                                    <div class="input-group">
-                                        <span :title="aspects[item.aspect]?.desc ?? 'Choose an aspect'" data-dropdown-close="true" class="text-start input-group-text affix-value border-info-subtle" x-text="item.aspect ? item.aspect : 'Choose an aspect'" @click="showDropdown(key, 'activeAspectDropdown')"></span>
-                                        <input type="number" x-model="item.value" class="form-control form-control-sm border-info-subtle" placeholder="Value" @change="saveList()" />
-                                        <button class="btn border-info-subtle btn-sm" type="button" @click="removeAspect(key)">⛔</button>
-                                        <template x-if="activeAspectDropdown == key">
-                                            <div class="dropdown-menu dropdown-menu-aspect">
-                                                <form>
-                                                    <div class="p-1">
-                                                        <input type="text" class="form-control form-control-sm border-info-subtle" x-model="searchTextAspects" placeholder="Search an aspect">
-                                                    </div>
-                                                </form>
-                                                <template x-for="aspectListKey in Object.keys(searchListAspects())">
-                                                    <a :class="{ 'dropdown-item' : true, active : aspectListKey == item.aspect }" href="#" x-html="'<strong>' + aspectListKey + '</strong> : ' + aspects[aspectListKey].desc" @click.prevent="item.aspect = aspectListKey; saveList();"></a>
-                                                </template>
-                                            </div>
-                                        </template>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </template>
-                </div>
-            </div>
-        </div>
-
-        <hr>
-
         <div class="uniques">
             <div class="sticky-top pt-1 pb-1 bg-body mb-2">
                 <h4>Uniques :
@@ -240,50 +178,26 @@
                 <div class="col-xl-4 col-md-6">
                     <div class="border border-primary-subtle p-2 rounded h-100">
                         <div class="mb-1 input-group">
-                            <span :title="uniques[item.unique]?.desc ?? 'Choose a unique'" data-dropdown-close="true" class="text-start input-group-text affix-value border-info-subtle" x-text="item.unique ? item.unique : 'Choose a unique'" @click="showDropdown(key, 'activeUniqueDropdown')"></span>
+                            <span tabindex="0" :title="uniques[item.unique]?.desc ?? 'Choose a unique'" data-dropdown-close="true" class="text-start input-group-text affix-value border-info-subtle" x-text="item.unique ? item.unique : 'Choose a unique'" @click="showDropdown(item, dropdownUniques)" @keydown.space.prevent="showDropdown(item, dropdownUniques)"></span>
                             <input type="number" x-model="item.value" class="form-control form-control-sm border-info-subtle" placeholder="Value" @change="saveList()" />
-                            <template x-if="activeUniqueDropdown == key">
-                                <div class="dropdown-menu dropdown-menu-aspect">
-                                    <form>
-                                        <div class="p-1">
-                                            <input type="text" class="form-control form-control-sm border-info-subtle" x-model="searchTextUniques" placeholder="Search a unique">
-                                        </div>
-                                    </form>
-                                    <template x-for="uniqueListKey in Object.keys(searchListUniques())">
-                                        <a :class="{ 'dropdown-item' : true, active : uniqueListKey == item.unique }" href="#" x-html="'<strong>' + uniqueListKey + '</strong> : ' + uniques[uniqueListKey].desc" @click.prevent="item.unique = uniqueListKey; saveList();"></a>
-                                    </template>
-                                </div>
-                            </template>
                         </div>
                         <div class="mb-1">
                             <input type="number" class="form-control form-control-sm border-info-subtle" x-model="item.minPower" placeholder="Min Power" @change="saveList">
                         </div>
-                        <template x-for="(affix, affixKey) in item.affixPools" :key="affix.id">
-
-                            <div class="input-group input-group-sm mb-1">
-                                <span data-dropdown-close="true" :title="affixes[affix.affix] ?? ''" class="text-start input-group-text affix-value border-warning-subtle" x-text="affixes[affix.affix] ?? 'Choose an affix'" @click="showDropdown(key + '-' + affixKey, 'activeAffixDropdown')"></span>
-                                <input type="number" class="form-control form-control-sm border-warning-subtle" x-model="affix.value" @keyup="saveList" placeholder="Value">
-                                <button type="button" class="btn btn-sm btn-outline-secondary border-warning-subtle" @click="removeAffix(key, affixKey, 'uniques')">⛔</button>
-                                <template x-if="activeAffixDropdown == key + '-' + affixKey">
-                                    <div class="dropdown-menu">
-                                        <form>
-                                            <div class="p-1">
-                                                <input type="text" class="form-control form-control-sm border-info-subtle" x-model="searchTextAffixes" placeholder="Search an affix">
-                                            </div>
-                                        </form>
-                                        <template x-for="affixKey in Object.keys(searchListAffixes())">
-                                            <a :class="{ 'dropdown-item' : true, active : affixKey == affix.affix }" href="#" x-text="affixes[affixKey]" @click.prevent="affix.affix = affixKey; saveList();"></a>
-                                        </template>
-                                    </div>
-                                </template>
-                            </div>
-
-                        </template>
                         <div class="text-end mb-1">
                             <button class="btn btn-info btn-sm" @click="addAffix(key, 'uniques')">Add Affix</button>
                         </div>
+                        <template x-for="(affix, affixKey) in item.affixPools" :key="affix.id">
 
-                        <div class="mb-1">
+                            <div class="input-group input-group-sm mb-1">
+                                <span tabindex="0" data-dropdown-close="true" :title="affixes[affix.affix] ?? ''" class="text-start input-group-text affix-value border-warning-subtle" x-text="affixes[affix.affix] ?? 'Choose an affix'" @keydown.space.prevent="showDropdown(affix, dropdownAffix)" @click="showDropdown(affix, dropdownAffix)"></span>
+                                <input type="number" class="form-control form-control-sm border-warning-subtle" x-model="affix.value" @keyup="saveList" placeholder="Value">
+                                <button type="button" class="btn btn-sm btn-outline-secondary border-warning-subtle" @click="removeAffix(key, affixKey, 'uniques')">⛔</button>
+                            </div>
+
+                        </template>
+
+                        <div class="mb-2 mt-2">
                             <button class="btn btn-info btn-danger btn-sm" @click="removeItem(key, 'uniques')">
                                 Remove
                             </button>
@@ -327,9 +241,39 @@
             </div>
         </div>
 
+        <div id="dropdownAffix" class="dropdown-menu">
+            <form>
+                <div class="p-1">
+                    <input type="text" class="form-control form-control-sm border-info-subtle" x-model="searchTextAffixes" placeholder="Search an affix">
+                </div>
+            </form>
+            <template x-for="affixKey in Object.keys(searchListAffixes())">
+                <a :class="{ 'dropdown-item' : true, active : currentObjForDropdown?.affix == affixKey }" href="#" x-text="affixes[affixKey]" @click.prevent="currentObjForDropdown.affix = affixKey; saveList();"></a>
+            </template>
+        </div>
+
+        <ul class="dropdown-menu" id="dropdownItemTypes">
+            <template x-for="itemType in itemTypes">
+                <li x-show="currentObjForDropdown?.itemType?.indexOf(itemType) == -1">
+                    <a class="dropdown-item" href="#" x-text="itemType" @click.prevent="currentObjForDropdown?.itemType?.push(itemType); saveList();"></a>
+                </li>
+            </template>
+        </ul>
+
+        <div class="dropdown-menu dropdown-menu-aspect" id="dropdownUniques">
+            <form>
+                <div class="p-1">
+                    <input type="text" class="form-control form-control-sm border-info-subtle" x-model="searchTextUniques" placeholder="Search a unique">
+                </div>
+            </form>
+            <template x-for="uniqueListKey in Object.keys(searchListUniques())">
+                <a :class="{ 'dropdown-item' : true, active : uniqueListKey == currentObjForDropdown?.unique }" href="#" x-html="'<strong>' + uniqueListKey + '</strong> : ' + uniques[uniqueListKey].desc" @click.prevent="currentObjForDropdown.unique = uniqueListKey; saveList();"></a>
+            </template>
+        </div>
+
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <script src="app.js?8394573"></script>
+    <script src="app.js?89573"></script>
     
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-KX7HPXZKRX"></script>
