--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
         </div>
         <div class="row mt-2">
             <div class="col text-end">
+                <button type="button" class="btn btn-sm btn-success" data-bs-toggle="modal" data-bs-target="#modalScrape">Get Build from Maxroll.gg or d4builds.gg</button>
                 <button type="button" class="btn btn-sm btn-outline-info" @click="exportBuilds">Export builds</button>
                 <button type="button" class="btn btn-sm btn-outline-info" data-bs-toggle="modal" data-bs-target="#modalImport">Import builds</button>
             </div>
@@ -241,6 +242,32 @@
             </div>
         </div>
 
+        <div class="modal fade" tabindex="-1" id="modalScrape" x-ref="modalScrape">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">Scrape build</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="bg-danger-subtle border border-danger mb-1 p-2 rounded">
+                            ⚠️ It must be a maxroll.gg planner link : https://maxroll.gg/d4/planner/... or a d4builds.gg link : https://d4builds.gg/builds/...
+                        </div>
+                        <form>
+                            <input type="text" class="form-control" x-ref="scrapeBuild" placeholder="link"></textarea>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary btn-sm" data-bs-dismiss="modal">Close</button>
+                        <button type="button" :disabled="scraping" class="btn btn-primary" @click="scrapeBuild">
+                          <span class="spinner-grow spinner-grow-sm" x-show="scraping"></span>
+                          <span role="status">Scrape</span>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <div id="dropdownAffix" class="dropdown-menu">
             <form>
                 <div class="p-1">
@@ -273,7 +300,7 @@
 
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <script src="app.js?89573"></script>
+    <script src="app.js?73894"></script>
     
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-KX7HPXZKRX"></script>
