--- a/index.html
+++ b/index.html
@@ -220,6 +220,9 @@
                             </div>
 
                         </template>
+                        <div class="mb-1">
+                            <input title="minGreaterAffixCount" type="number" class="form-control form-control-sm border-info-subtle" x-model="item.minGreaterAffixCount" placeholder="minGreaterAffixCount" @change="saveList">
+                        </div>
 
                         <div class="mb-2 mt-2">
                             <button class="btn btn-info btn-danger btn-sm" @click="removeItem(key, 'uniques')">
@@ -323,7 +326,7 @@
 
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <script src="app.js?73894"></script>
+    <script src="app.js?646844"></script>
     
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-KX7HPXZKRX"></script>
